--- a/services_nginx_meshviewer/templates/config.js.j2
+++ b/services_nginx_meshviewer/templates/config.js.j2
@@ -40,13 +40,9 @@ module.exports = function () {
        '/data/tdf4/tdf/',
        '/data/tdf5/inn/',
        '/data/tdf6/flu/',
-       '/data/fgw02/domain01/',
-       '/data/fgw02/domain03/',
-       '/data/fgw03/domain04/',
-       '/data/fgw03/domain05/',
-       '/data/fgw04/domain07/',
-       '/data/fgw04/domain11/',
-       '/data/fgw04/domain14/',
+       '/data/siegburg1/domain01/',
+       '/data/siegburg2/domain02/',
+       '/data/siegburg2/domain05/',
        '/data/lohmar1/domain01/',
        '/data/lohmar1/domain03/',
        '/data/lohmar2/domain05/',
