--- a/services_nginx_meshviewer/templates/config.js.j2
+++ b/services_nginx_meshviewer/templates/config.js.j2
@@ -187,6 +187,14 @@ module.exports = function () {
       'site': 'su-su',
       'name': 'Siegburg'
     },
+       {
+      'site': 'su-inn',
+      'name': 'Siegburg Innenstadt'
+    },
+    {
+      'site': 'su-uml',
+      'name': 'Siegburg Umland'
+    },
     {
       'site': 'lo-snw',
       'name': 'Soziale Netzwerke'
