--- a/mapserver_collector/templates/yanic_siegburg_nodes.cron.j2
+++ b/mapserver_collector/templates/yanic_siegburg_nodes.cron.j2
@@ -1,5 +1,5 @@
 #
-# cron.d/yanic_collector -- schedules periodic wget of yanic .json data
+# cron.d/yanic_siegburg_nodes -- schedules periodic wget of yanic .json data
 #
 # Copyright © technik <technik@ffrsk.de>
 # distributed under the terms of GPL 2.0
