--- a/mapserver_collector/templates/yanic_lohmar_nodes.cron.j2
+++ b/mapserver_collector/templates/yanic_lohmar_nodes.cron.j2
@@ -1,5 +1,5 @@
 #
-# cron.d/yanic_collector -- schedules periodic wget of yanic .json data
+# cron.d/yanic_lohmar_nodes -- schedules periodic wget of yanic .json data
 #
 # Copyright © technik <technik@freifunk-siegburg.de>
 # distributed under the terms of GPL 2.0
