--- a/services_nginx_meshviewer/templates/config.js.j2
+++ b/services_nginx_meshviewer/templates/config.js.j2
@@ -37,9 +37,10 @@ module.exports = function () {
     ],
     // String or array of data provider are supported
     'dataPath': [
-       '/data/tdf4/tdf/',
-       '/data/tdf5/inn/',
-       '/data/tdf6/flu/',
+    //   '/data/tdf4/tdf/',
+    //   '/data/tdf5/inn/',
+    //   '/data/tdf6/flu/',
+       '/data/tdf/unifi/',
        '/data/siegburg1/domain01/',
        '/data/siegburg2/domain02/',
        '/data/siegburg2/domain05/',
