--- a/mapserver_collector/templates/yanic_lohmar_nodes.cron.j2
+++ b/mapserver_collector/templates/yanic_lohmar_nodes.cron.j2
@@ -60,3 +60,5 @@
 */2 * * * * root wget -U yanic_collector -q -4 http://lohmar3.ffrsk.de/11_meshviewer.json -O /opt/data/lohmar3/11_meshviewer.json; if [ -s /opt/data/lohmar3/11_meshviewer.json ]; then cp /opt/data/lohmar3/11_meshviewer.json /opt/data/lohmar3/domain11/meshviewer.json; fi >/dev/null 2>&1
 */2 * * * * root wget -U yanic_collector -q -4 http://lohmar3.ffrsk.de/11_nodelist.json -O /opt/data/lohmar3/11_nodelist.json; cp if [ -s /opt/data/lohmar3/11_nodelist.json ]; then cp /opt/data/lohmar3/11_nodelist.json /opt/data/lohmar3/domain11/nodelist.json; fi >/dev/null 2>&1
 */2 * * * * root wget -U yanic_collector -q -4 http://lohmar3.ffrsk.de/11_nodes.json -O /opt/data/lohmar3/11_nodes.json; if [ -s /opt/data/lohmar3/11_nodes.json ]; then /opt/data/jsoncheck.pl /opt/data/lohmar3/11_nodes.json /opt/data/lohmar3/domain11/nodes.json; fi >/dev/null 2>&1
+# rsk unifi
+*/2 * * * * root wget -U yanic_collector -q -4 https://ubnt-api-ffrs.freifunk-rhein-sieg.net/meshviewer.json -O /opt/data/rsk/meshviewer.json; if [ -s /opt/data/rsk/meshviewer.json ]; then cp /opt/data/rsk/meshviewer.json /opt/data/rsk/unifi/meshviewer.json; fi >/dev/null 2>&1
