--- a/services_nginx_meshviewer/templates/config.js.j2
+++ b/services_nginx_meshviewer/templates/config.js.j2
@@ -49,7 +49,8 @@ module.exports = function () {
        '/data/lohmar2/domain05/',
        '/data/lohmar3/domain04/',
        '/data/lohmar3/domain07/',
-       '/data/lohmar3/domain11/'
+       '/data/lohmar3/domain11/',
+       '/data/rsk/unifi/'
      ],
     'siteName': 'Freifunk Rhein-Sieg',
     'mapLayers': [
