--- a/services_nginx_meshviewer/templates/config.js.j2
+++ b/services_nginx_meshviewer/templates/config.js.j2
@@ -50,7 +50,8 @@ module.exports = function () {
        '/data/lohmar3/domain04/',
        '/data/lohmar3/domain07/',
        '/data/lohmar3/domain11/',
-       '/data/rsk/unifi/'
+       '/data/rsk/unifi/',
+       '/data/voreifel1/domain15/'
      ],
     'siteName': 'Freifunk Rhein-Sieg',
     'mapLayers': [
