--- a/services_nginx_meshviewer/templates/config.js.backup.j2
+++ b/services_nginx_meshviewer/templates/config.js.backup.j2
@@ -78,6 +78,10 @@ module.exports = function () {
     ],
     'domainNames': [
       {
+        'domain': 'lo-prz',
+        'name': 'Porz'
+      },
+      {
         'domain': 'lo-su',
         'name': 'Siegburg'
       },
@@ -154,6 +158,10 @@ module.exports = function () {
     {
       'site': 'flu',
       'name': 'Troisdorf Soziale Netze'
+    },
+    {
+      'site': 'lo-prz',
+      'name': 'Porz'
     },
     {
       'site': 'lo-su',
