--- a/services_nginx_meshviewer/templates/config.js.j2
+++ b/services_nginx_meshviewer/templates/config.js.j2
@@ -101,11 +101,19 @@ module.exports = function () {
         'name': 'Sankt Augustin'
       },
       {
+        'domain': 'nk-sa',
+        'name': 'Sankt Augustin'
+      },
+      {
         'domain': 'su-sa',
         'name': 'Sankt Augustin'
       },
       {
         'domain': 'lo-snw',
+        'name': 'Soziale Netzwerke'
+      },
+      {
+        'domain': 'nk-snw',
         'name': 'Soziale Netzwerke'
       },
       {
@@ -117,11 +125,19 @@ module.exports = function () {
         'name': 'Altenkirchen'
       },
       {
+        'domain': 'nk-ak',
+        'name': 'Altenkirchen'
+      },
+      {
         'domain': 'su-ak',
         'name': 'Altenkirchen'
       },
       {
         'domain': 'lo-nk',
+        'name': 'Niederkassel'
+      },
+      {
+        'domain': 'nk-nk',
         'name': 'Niederkassel'
       },
       {
