--- a/services_nginx_meshviewer/templates/config.js.j2
+++ b/services_nginx_meshviewer/templates/config.js.j2
@@ -50,6 +50,10 @@ module.exports = function () {
        '/data/lohmar3/domain04/',
        '/data/lohmar3/domain07/',
        '/data/lohmar3/domain11/',
+       '/data/niederkassel1/domain01/',
+       '/data/niederkassel1/domain03/',
+       '/data/niederkassel1/domain04/',
+       '/data/niederkassel2/domain05/',
        '/data/rsk/unifi/',
        '/data/voreifel1/domain15/'
      ],
